[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Images/logo.png" type="Texture" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/Images/button.png" type="Texture" id=4]
[ext_resource path="res://assets/Themes/MainMenu.tres" type="DynamicFont" id=5]

[sub_resource type="ShaderMaterial" id=1]

[node name="MainMenu" type="Control"]
material = SubResource( 1 )
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.643137, 0.854902, 0.631373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo2" type="TextureRect" parent="."]
margin_top = 14.0
margin_right = 1703.0
margin_bottom = 470.0
rect_scale = Vector2( 0.6, 0.6 )
input_pass_on_modal_close_click = false
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.13
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_right = 136.0
margin_bottom = 221.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="TextureRect" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 272.0
margin_bottom = 105.0
focus_neighbour_top = NodePath("../Quit")
mouse_default_cursor_shape = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/StartGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.5136
margin_top = -13.0
margin_right = 74.4864
margin_bottom = 13.0
custom_fonts/font = ExtResource( 5 )
text = "Iniciar Jogo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureRect" parent="VBoxContainer"]
margin_top = 115.0
margin_right = 272.0
margin_bottom = 182.0
focus_neighbour_bottom = NodePath("../StartGame")
mouse_default_cursor_shape = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Quit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -13.0
margin_right = 24.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 5 )
text = "Sair"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="VBoxContainer/StartGame" to="." method="_on_button_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/StartGame" to="." method="_on_StartGame_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/StartGame" to="." method="_on_StartGame_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/Quit" to="." method="_on_button3_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Quit" to="." method="_on_Quit_mouse_exited"]
